Fix long standing problem with CD/DVD writing with `dd'. If done this way the device will remain in a wait-for-more-stuff-to-be-written state delaying other SCSI calls, esp. some read-size or read-layout calls, until its told there is no more comming.

To fix this, on last close explicitly flush the caches releasing the device
from this mode and allowing other SCSI commands to reach it.

This fixes PR 40528